com-at/build/log/idf_py_stderr_output_785381
warning: default on the choice symbol BT_NIMBLE_ENABLED (defined at /home/eunous/esp-idf/components/bt/Kconfig:22, /home/eunous/git/dvid/com-at/com-at/components/esp-nimble-cpp/Kconfig:221) will have no effect, as defaults do not affect choice symbols
warning: the choice symbol BT_NIMBLE_ENABLED (defined at /home/eunous/esp-idf/components/bt/Kconfig:22, /home/eunous/git/dvid/com-at/com-at/components/esp-nimble-cpp/Kconfig:221) is defined with a prompt outside the choice
info: INFO: Symbol BT_ENABLED defined in multiple locations (see below). Please check if this is a correct behavior or a random name match:
    /home/eunous/esp-idf/components/bt/Kconfig:3
    /home/eunous/git/dvid/com-at/com-at/components/esp-nimble-cpp/Kconfig:214
info: INFO: Symbol BT_NIMBLE_ENABLED defined in multiple locations (see below). Please check if this is a correct behavior or a random name match:
    /home/eunous/git/dvid/com-at/com-at/components/esp-nimble-cpp/Kconfig:221
    /home/eunous/esp-idf/components/bt/Kconfig:22
info: INFO: Symbol BT_NIMBLE_TRANSPORT_UART defined in multiple locations (see below). Please check if this is a correct behavior or a random name match:
    /home/eunous/esp-idf/components/bt/host/nimble/Kconfig.in:976
    /home/eunous/git/dvid/com-at/com-at/components/esp-nimble-cpp/Kconfig:229
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c: In function 'at_handle_bleinit':
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c:46:5: error: implicit declaration of function 'esp_wifi_stop'; did you mean 'esp_timer_stop'? [-Werror=implicit-function-declaration]
   46 |     esp_wifi_stop();
      |     ^~~~~~~~~~~~~
      |     esp_timer_stop
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c:47:5: error: implicit declaration of function 'esp_wifi_deinit'; did you mean 'esp_timer_deinit'? [-Werror=implicit-function-declaration]
   47 |     esp_wifi_deinit();
      |     ^~~~~~~~~~~~~~~
      |     esp_timer_deinit
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/build.make:76: esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/at_ble.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5745: esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:136: all] Error 2
